# caja-admin

./: AUTHORS  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  NEWS  README.md  caja-admin.appdata.xml  generate-pot-file.sh  meson.build  meson_options.txt
extension/: caja-admin.py.in
po/: LINGUAS  POTFILES  ar.po  caja-admin.pot  cs.po  de.po  es.po  eu.po  fr.po  it.po  kab.po  lt.po  meson.build  oc.po  pl.po  pt.po  ru.po  sk.po  zh_CN.po
polkit/: org.freedesktop.caja-admin.policy.in
